# BS-Draft

./: AppConfig.cpp  AppConfig.h  CMakeLists.txt  CacheUtils.cpp  CacheUtils.h  DataLoader.cpp  DataLoader.h  DataStructures.cpp  DataStructures.h  DraftState.cpp  DraftState.h  Heuristics.cpp  Heuristics.h  MCTS.cpp  MCTS.h  MainWindow.cpp  MainWindow.h  README.md  StatsCalculator.cpp  StatsCalculator.h  main.cpp  stats.pack
